gateway/1.11/modules/ROOT/pages/policies-flex-dataweave-support.adoc
= DataWeave Support in Flex Gateway Policies
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:page-aliases: policies::policies-flex-dataweave-support.adoc

xref:dataweave::index.adoc[DataWeave] is the programming language designed by MuleSoft for data transformation. It enables you to build a simple solution for a common integration developer use case: read and parse data from one format, transform the data, and write it out as a different format.

Flex Gateway supports a subset of DataWeave in policy configuration expressions. DataWeave is only supported in included policies and custom policies created with PDK..

== Available Types

* xref:dataweave::dataweave-type-system.adoc#null[`Null`]
* `Boolean`
* `String`
* `Number` (Driven as 64 bits floating points)
* xref:dataweave::dataweave-type-system.adoc#array-type[`Array`]
* xref:dataweave::dataweave-type-system.adoc#object-type[`Object`] (Repeated keys are not available)

== Available Value Constructors for Types

* xref:dataweave::dataweave-types.adoc#dw_type_boolean[`Boolean`]
* xref:dataweave::dataweave-types.adoc#dw_type_string[`String`]
* xref:dataweave::dataweave-types.adoc#dw_type_null[`Null`]
* xref:dataweave::dataweave-types.adoc#dw_type_number[`Number`]
* xref:dataweave::dataweave-types.adoc#dw_type_array[`Array`]

== Unavailable Value Constructors for Types

* xref:dataweave::dataweave-types.adoc#dw_type_object[`Object`] (Objects can not be defined as literals)

== Available Flow Control Structures

* xref:dataweave::dataweave-flow-control.adoc#control_flow_if_else[`if else`]

== Unavailable Flow Control Structures

* xref:dataweave::dataweave-flow-control.adoc#control_flow_do[`do`]

== Available Selectors

* `Array[Number]`
* `Array[String]`
* `Object[String]`
* `String[Number]`

== Unavailable Selectors

* `Object[Number]`

== Available Equality and Relational Operators

* xref:dataweave::dw-operators.adoc#equality-and-relational-operators[`==`]
* xref:dataweave::dw-operators.adoc#equality-and-relational-operators[`!=`]
* xref:dataweave::dw-operators.adoc#equality-and-relational-operators[`>=`]
* xref:dataweave::dw-operators.adoc#equality-and-relational-operators[`&lt;=`]

== Available Logical Operators

* xref:dataweave::dw-operators.adoc#logical_operators[`not`]
* xref:dataweave::dw-operators.adoc#logical_operators[`and`]
* xref:dataweave::dw-operators.adoc#logical_operators[`or`]

[[available-default-operators]]
== Available Default Operators

* xref:dataweave::dataweave-cookbook-defaults.adoc#example-of-using-the-keyword-default-to-set-a-default-value[`default`]

== Available Functions

=== `++`

* xref:dataweave::dw-core-functions-plusplus.adoc#plusplus1[`++(Array<S>, Array<T>): Array<S | T>`]
* xref:dataweave::dw-core-functions-plusplus.adoc#plusplus2[`++(String, String): String`]

=== `contains`

* xref:dataweave::dw-core-functions-contains.adoc#contains1[`contains(Array<T>, Any): Boolean`]
* xref:dataweave::dw-core-functions-contains.adoc#contains2[`contains(String, String): Boolean`]

=== `lower`

* xref:dataweave::dw-core-functions-lower.adoc#lower1[`lower(String): String`]
* xref:dataweave::dw-core-functions-lower.adoc#lower2[`lower(Null): Null`]

=== `splitBy`

* xref:dataweave::dw-core-functions-splitby.adoc#splitby2[`splitBy(String, String): Array<String>`]

=== `sizeOf`

* xref:dataweave::dw-core-functions-sizeof.adoc#sizeof1[`sizeOf(Array<Any>): Number`]
* xref:dataweave::dw-core-functions-sizeof.adoc#sizeof2[`sizeOf(Object): Number`]
* xref:dataweave::dw-core-functions-sizeof.adoc#sizeof4[`sizeOf(String): Number`]

=== `trim`

* xref:dataweave::dw-core-functions-trim.adoc#trim1[`trim(String): String`]
* xref:dataweave::dw-core-functions-trim.adoc#trim2[`trim(Null): Null`]

=== `upper`

* xref:dataweave::dw-core-functions-upper.adoc#upper1[`upper(String): String`]
* xref:dataweave::dw-core-functions-upper.adoc#upper2[`upper(Null): Null`]

=== `uuid`

* xref:dataweave::dw-core-functions-uuid.adoc#uuid1[`uuid(): String`]

=== `dw::core::Strings::substringAfter`

* xref:dataweave::dw-strings-functions-substringafter.adoc#substringafter1[`substringAfter(String, String): String`]
* xref:dataweave::dw-strings-functions-substringafter.adoc#substringafter2[`substringAfter(Null, String): Null`]

=== `dw::core::Strings::substringAfterLast`

* xref:dataweave::dw-strings-functions-substringafterlast.adoc#substringafterlast1[`substringAfterLast(String, String): String`]
* xref:dataweave::dw-strings-functions-substringafterlast.adoc#substringafterlast2[`substringAfterLast(Null, String): Null`]

=== `dw::core::Strings::substringBefore`

* xref:dataweave::dw-strings-functions-substringbefore.adoc#substringbefore1[`substringBefore(String, String): String`]
* xref:dataweave::dw-strings-functions-substringbefore.adoc#substringbefore2[`substringBefore(Null, String): Null`]

=== `dw::core::Strings::substringBeforeLast`

* xref:dataweave::dw-strings-functions-substringbeforelast.adoc#substringbeforelast1[`substringBeforeLast(text: String, separator: String): String`]
* xref:dataweave::dw-strings-functions-substringbeforelast.adoc#substringbeforelast2[`substringBeforeLast(text: Null, separator: String): Null`]

=== toBase64

* xref:dataweave::dw-binaries-functions-tobase64.adoc#tobase641[`toBase64(content: Binary): String`]

=== fromBase64

* xref:dataweave::dw-binaries-functions-frombase64.adoc#frombase641[`fromBase64(base64String: String): Binary`]

[NOTE]
====
Flex Gateway doesn't support DataWeave expressions with binary type results. To use the `dw::Binaries::fromBase64('dXNlcjpwYXNz')` function, transform the result to a string. Transform the binary output to a string with the `dw::util::Coercions::toString(binary: Binary, encoding: String): String` function. For example, `#[dw::util::Coercions::toString(dw::core::Binaries::fromBase64('dXNlcjpwYXNz'), 'UTF-8')]`. 
If using a different function that transforms the binary by default, such as `#[splitBy(dw::core::Binaries::fromBase64('dXNlcjpwYXNz'), ':')]`, you can skip manually transforming the binary. 
====

=== toBinary

* xref:dataweave::dw-coercions-functions-tobinary.adoc#tobinary1[`toBinary(str: String, encoding: String): Binary`]

=== toString

* xref:dataweave::dw-coercions-functions-tostring.adoc#tostring3[`toString(binary: Binary, encoding: String): String`]

[[available-predefined-variables]]
== Available Predefined Variables

* xref:dataweave::dataweave-variables-context.adoc[`attributes`]
** `attributes.headers`
** `attributes.method` (Only available in request context)
** `attributes.queryParams` (Only available in request context)
** `attributes.queryString` (Only available in request context)
** `attributes.requestPath` (Only available in request context)
** `attributes.requestUri` (Only available in request context)
** `attributes.localAddress` (Only available in request context)
** `attributes.remoteAddress` (Only available in request context)
** `attributes.scheme` (Only available in request context)
** `attributes.version` (Only available in request context)
** `attributes.statusCode` (Only available in response context)

* xref:dataweave::dataweave-variables-context.adoc[`authentication`]
** `authentication.clientId`
** `authentication.clientName`
** `authentication.principal`
** `authentication.properties`
+
To learn more about how to access the authentication object, see <<access-authentication-object>>.

* `payload`
** Fields depend on the current payload. For example, `#[payload]` returns the body of the message.

* xref:dataweave::dataweave-variables-context.adoc[`vars`]
** Individual policies support different sets of variables. For information, refer to the policies listed in xref:policies-included-directory.adoc[].

== DataWeave Usage Examples

You can use DataWeave to extract different values from the request and response. 

NOTE: The Flex Gateway Policy Development Kit (PDK) provides the https://github.com/mulesoft/pdk-custom-policy-examples/tree/main/dataweave[DataWeave example policy] that you can use to test DataWeave expressions.

For example, use DataWeave expressions to:

* Read a header:
+
----
#[attributes.headers.'my-header']
----

* Ensure a specific header is defined:
+
----
#[attributes.headers.'my-header' != null]
----

* Check if a request has basic authorization:
+
----
#[lower(splitBy(attributes.headers.authorization default '', ' ')[0]) == 'basic']
----

* Check if a request contains `/some` path:
+
----
#[attributes.requestPath contains '/some']
----

* Check if a request doesn't contain `/some` path:
+
----
#[not(attributes.requestPath contains '/some')]
----

* Read the username from a `Basic` authorization header:
+
----
#[splitBy(dw::core::Binaries::fromBase64(dw::core::Strings::substringAfter(attributes.headers.authorization default '', 'Basic')), ':')[0]]
----

* Read the password from a `Basic` authorization header:
+
----
#[splitBy(dw::core::Binaries::fromBase64(dw::core::Strings::substringAfter(attributes.headers.authorization default '', 'Basic ')), ':')[1]]
----

* Read the first value of the `x-forwarded-for` header:
+
----
#[trim(splitBy(attributes.headers.'x-forwarded-for', ',')[0])]
----

* Read the last value of the `x-forwarded-for` header:
+
----
#[trim(splitBy(attributes.headers.'x-forwarded-for', ',')[-1])]
----

* Read the value from a `Cookie`:
+
----
#[trim(dw::core::Strings::substringBefore(dw::core::Strings::substringAfter(attributes.headers.Cookie default '', 'myCookieName='), ';'))]
----

* Check if a single value or space-separated header contains a specific value:
+
----
#[splitBy(attributes.headers.scopes default '', ' ') contains 'read']
----

[[access-authentication-object]]
== Access the Authentication Object

To access the xref:dataweave::dataweave-variables-context.adoc[`authentication`] object, you must first configure an authentication policy that populates the object.

The authentication policy you apply affects the available authentication object properties:

* Multiple policies can validate Client ID:
** xref:policies-included-client-id-enforcement.adoc[]
** xref:policies-included-rate-limiting-sla.adoc[]
** xref:policies-included-oauth-token-introspection.adoc[] (If Client ID enforcement is configured)
** xref:policies-included-openid-token-enforcement.adoc[] (If Client ID enforcement is configured)
** xref:policies-included-jwt-validation.adoc[] (If Client ID enforcement is configured)
+ 
Policies validating Client ID provide these authentication object properties:
+
*** `authentication.clientName`: Name of the contract's client application
*** `authentication.clientId`: ID of the contract's client application
*** `authentication.properties.slaId`: SLA ID assigned to the contract

* xref:policies-included-jwt-validation.adoc[]:
** `authentication.properties.claims.<claimName>`: All claims provided by the JWT

* Multiple policies validate basic authentication credentials:
** xref:policies-included-basic-auth-simple.adoc[]
** xref:policies-included-basic-auth-ldap.adoc[]
+ 
Policies validating basic authentication credentials provide these authentication object properties:
+
*** `authentication.principal`: Username passed as basic auth user

After your policy populates the authentication object, you can access the object in policies ordered after the authentication policy using DataWeave expressions. For example:

* Read a value from the authentication object:
+
----
#[authentication.properties.claims.exp]
----

* Check if a JSON array or a JSON string JWT claim contains a specific value:
+
----
#[authentication.properties.claims.custom_claim contains 'read']
----




